# -

./: CMakeLists.txt  Dockerfile
src/: 18.cpp  18.h
test/: test_lab.cpp
